force-app/main/default/objects/FS_Post_Install_Marketing__c/FS_Post_Install_Marketing__c.object-meta.xml
<CustomObject>
    <label>Post Install Marketing</label>
    <nameField>
        <displayFormat>PIM-{0000}</displayFormat>
        <label>Post Install Marketing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Install Marketing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>