force-app/main/default/objects/FS_Post_Install_Marketing__c/fields/FS_Account__c.field-meta.xml
<CustomField>
    <fullName>FS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Post Install Marketing</relationshipLabel>
    <relationshipName>Post_Install_Marketing</relationshipName>
    <type>Lookup</type>
</CustomField>