force-app/main/default/objects/FS_Post_Install_Marketing__c/fields/FS_Cncl_Post_Install_Marketting_fields__c.field-meta.xml
<CustomField>
    <fullName>FS_Cncl_Post_Install_Marketting_fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>