force-app/main/default/objects/FS_Post_Install_Marketing__c/fields/FS_Enable_CE_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Enable_CE_Effective_Date__c</fullName>
    <label>FET Enable CE Effective Date</label>
    <type>Date</type>
</CustomField>