force-app/main/default/objects/FS_Post_Install_Marketing__c/fields/FS_Enable_Consumer_Engagement__c.field-meta.xml
<CustomField>
    <fullName>FS_Enable_Consumer_Engagement__c</fullName>
    <label>FET Enable Consumer Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>