force-app/main/default/objects/FS_Post_Install_Marketing__c/fields/FS_FAV_MIX_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_FAV_MIX_Effective_Date__c</fullName>
    <label>Favorite Mix Effective Date</label>
    <type>Date</type>
</CustomField>