force-app/main/default/objects/FS_Post_Install_Marketing__c/fields/FS_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation</label>
    <referenceTo>FS_Installation__c</referenceTo>
    <relationshipLabel>Post Install Marketing</relationshipLabel>
    <relationshipName>Post_Install_Marketing</relationshipName>
    <type>Lookup</type>
</CustomField>