force-app/main/default/objects/FS_Post_Install_Marketing__c/fields/FS_LTO__c.field-meta.xml
<CustomField>
    <fullName>FS_LTO__c</fullName>
    <inlineHelpText>Select &quot;No&quot; in case an existing Limited Time Offer on the dispenser needs to be removed</inlineHelpText>
    <label>FET Limited Time Offer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>