force-app/main/default/objects/FS_Post_Install_Marketing__c/fields/FS_LTO_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_LTO_Effective_Date__c</fullName>
    <label>FET Limited Time Offer Effective Date</label>
    <type>Date</type>
</CustomField>