force-app/main/default/objects/FS_Post_Install_Marketing__c/fields/FS_Promo_Enabled_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Promo_Enabled_Effective_Date__c</fullName>
    <label>FET Promotion Enabled Effective Date</label>
    <type>Date</type>
</CustomField>