force-app/main/default/objects/FS_Post_Install_Marketing__c/fields/FS_RcdIDForCncl__c.field-meta.xml
<CustomField>
    <fullName>FS_RcdIDForCncl__c</fullName>
    <label>Record ID For Cancel</label>
    <length>25</length>
    <type>Text</type>
</CustomField>