force-app/main/default/objects/FS_Post_Install_Marketing__c/fields/FS_Related_Object__c.field-meta.xml
<CustomField>
    <fullName>FS_Related_Object__c</fullName>
    <formula>HYPERLINK(
    &#39;/&#39; + FS_Account__c + FS_Installation__c + FS_Outlet_Dispenser__c, FS_Account__r.Name + FS_Installation__r.Name + FS_Outlet_Dispenser__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Object</label>
    <type>Text</type>
</CustomField>