force-app/main/default/objects/FS_Post_Install_Marketing__c/fields/Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Object_ID__c</fullName>
    <label>Object ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>