force-app/main/default/objects/FS_Post_Install_Marketing__c/validationRules/Enable_CE_Effective_Date_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Enable_CE_Effective_Date_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISBLANK(TEXT(FS_Enable_Consumer_Engagement__c)), 
(ISBLANK(FS_Enable_CE_Effective_Date__c)) 
)</errorConditionFormula>
    <errorDisplayField>FS_Enable_CE_Effective_Date__c</errorDisplayField>
    <errorMessage>This field is mandatory if &#39;FET Enable Consumer Engagement&#39; is selected.</errorMessage>
</ValidationRule>