force-app/main/default/objects/FS_Post_Install_Marketing__c/validationRules/Fav_mix_effective_date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Fav_mix_effective_date_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISBLANK(TEXT(FS_FAV_MIX__c)),
(ISBLANK(FS_FAV_MIX_Effective_Date__c))
)</errorConditionFormula>
    <errorDisplayField>FS_FAV_MIX_Effective_Date__c</errorDisplayField>
    <errorMessage>This field is mandatory if &#39;Favorite Mix&#39;  is selected.</errorMessage>
</ValidationRule>