force-app/main/default/objects/FS_Post_Install_Marketing__c/validationRules/Favorite_Mix_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Favorite_Mix_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(TEXT(FS_FAV_MIX__c)), 
!(ISBLANK(FS_FAV_MIX_Effective_Date__c)) 
)</errorConditionFormula>
    <errorDisplayField>FS_FAV_MIX__c</errorDisplayField>
    <errorMessage>This field is mandatory if &#39;Favorite Mix Effective Date&#39; is provided.</errorMessage>
</ValidationRule>