force-app/main/default/objects/FS_Post_Install_Marketing__c/validationRules/Promo_Enabled_effective_date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Promo_Enabled_effective_date_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISBLANK(TEXT(FS_Promo_Enabled__c)),
(ISBLANK(FS_Promo_Enabled_Effective_Date__c))
)</errorConditionFormula>
    <errorDisplayField>FS_Promo_Enabled_Effective_Date__c</errorDisplayField>
    <errorMessage>This field is mandatory if &#39;FET Promo Enabled&#39; is selected</errorMessage>
</ValidationRule>